make line  5 more awesome

--- a/_posts/0000-01-02-moddu.md
+++ b/_posts/0000-01-02-moddu.md
@@ -2,5 +2,5 @@
 layout: slide
 title: "Welcome to our Desktop slide!"
 ---
-This is my review text slide
+This is my review text slide : tada:(
 Use the left arrow to go back!
